funcional conexiones a paquete y acreditacion

--- a/tramites/src/main/webapp/resources/css/main.css
+++ b/tramites/src/main/webapp/resources/css/main.css
@@ -12,6 +12,7 @@
 .col5_label{width: 41.67%;text-align: right;}
 .col4{width: 33.33%;}
 .col4_label{width: 33.33%;text-align: right;}
+.col4_left{width: 33.33%;text-align: left;}
 .col3{width: 25%;}
 .col3_label{width: 25%;text-align: right;}
 .col3_left{width: 25%;text-align: left;}
