--- a/tramites/src/main/webapp/resources/css/main.css
+++ b/tramites/src/main/webapp/resources/css/main.css
@@ -4,6 +4,7 @@
 .col9{width: 75%;}
 .col9_left{width: 75%;text-align: left;}
 .col8{width: 66.67%;}
+.col8_left{width: 66.67%;text-align: left;}
 .col7{width: 58.33%;}
 .col6{width: 50%;}
 .col6_label{width: 50%;text-align: right;}
