--- a/tramites/src/main/webapp/resources/css/main.css
+++ b/tramites/src/main/webapp/resources/css/main.css
@@ -1,4 +1,5 @@
 .col12{width: 100%;}
+.col12_left{width: 100%; text-align: left;}
 .col11{width: 91.67%;}
 .col10{width: 83.33%;}
 .col9{width: 75%;}
