--- a/tramites/src/main/webapp/resources/template/plantilla.xhtml
+++ b/tramites/src/main/webapp/resources/template/plantilla.xhtml
@@ -20,8 +20,8 @@
             <div id="header">
                 <div class="header-top">
                     <h:panelGrid columns="2" style="width: 100%" columnClasses="col4,col8_left">
-                        <h:graphicImage name="images/mined-logo.svg" style="height:110px; margin-right:20px;cool"/>
-                        <h1>Registro de trámites en línea</h1>
+                        <h:graphicImage name="images/mined-logo.svg" style="height:100px; margin-right: 20px; font-family: Bembo Std;"/>
+                        <h1 style="font-family: Bembo Std !important;">Registro de trámites en línea</h1>
                     </h:panelGrid>
 
                     <ui:insert name="titulo"/>
