--- a/tramites/src/main/webapp/resources/paradise-layout/css/layout-deepsea.css
+++ b/tramites/src/main/webapp/resources/paradise-layout/css/layout-deepsea.css
@@ -20,6 +20,10 @@
 /* Predefined Colors */
 /* roboto-300 - latin */
 @font-face {
+    font-family: "Bembo Std";
+    src: url("#{resource['paradise-layout:fonts/BemboStd.otf']}");
+}
+@font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
@@ -616,7 +620,7 @@
     width: 960px;
     margin: 0 auto;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
@@ -716,7 +720,7 @@
         margin-top: 36px;
         margin-bottom: 28px; }
   .landing-body .landing-wrapper #pricing {
-    padding: 0px 0 75px 0;
+    padding: 0px 0 50px 0;
     text-align: center; }
     .landing-body .landing-wrapper #pricing > div {
       width: 960px;
