--- a/tramites/src/main/webapp/resources/template/plantilla.xhtml
+++ b/tramites/src/main/webapp/resources/template/plantilla.xhtml
@@ -13,6 +13,8 @@
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
         <title>MINEDUCYT - Trámites en línea</title>
+        
+        <h:outputScript name="funciones.js" library="js" />
     </h:head>
 
     <h:body styleClass="landing-body">
