--- a/tramites/src/main/webapp/resources/template/plantilla.xhtml
+++ b/tramites/src/main/webapp/resources/template/plantilla.xhtml
@@ -14,6 +14,8 @@
         </f:facet>
         <title>MINEDUCYT - Trámites en línea</title>
         
+        <ui:insert name="head"/>
+        
         <h:outputScript name="funciones.js" library="js" />
     </h:head>
 
