--- a/tramites/src/main/webapp/resources/paradise-layout/css/layout-deepsea.css
+++ b/tramites/src/main/webapp/resources/paradise-layout/css/layout-deepsea.css
@@ -725,7 +725,7 @@
     .landing-body .landing-wrapper #pricing > div {
       width: 960px;
       margin: 0 auto;
-      text-align: center; }
+      text-align: left; }
       .landing-body .landing-wrapper #pricing > div h1 {
         font-size: 22px;
         font-weight: 600;
